--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<h2 class="section-title">ケロマツ</h2>
 					</div>
 					<div class="testimonials-inner">
-						<q>学生時代からデータサイエンティストとして、サービス開発、改善、研究開発に従事。現在SIer企業にてデータサイエンティストとして研究開発、分析業務を行う。また、副業でもデータサイエンティストとして活動中。</q>
+						<q>学生時代からデータサイエンティストとして、サービス開発、改善、研究開発に従事。現在日経大手企業にてデータサイエンティストとして研究開発、分析業務を行う。また、副業でもデータサイエンティストとして活動中。</q>
 						<div class="testimonial-author">
 							<div class="author-detail">
 								<div class="name">職業</div>
@@ -172,7 +172,7 @@
 				    </tr>
                     <tr>
                         <td>2022/04 - 現在</td>
-                        <td>某SIer企業</td>
+                        <td>某日経大手企業</td>
                         <td>係長相当の役職で新卒入社</td>
                       </tr>
 				  </tbody>
