--- a/index.html
+++ b/index.html
@@ -150,31 +150,36 @@
 				    </tr>
 				  </thead>
 				  <tbody>
+					<tr>
+				        <td>2016/04 - 2020/03</td>
+				        <td>立命館大学</td>
+				        <td>数理科学科 入学・卒業</td>
+				    </tr>
                     <tr>
                         <td>2018/04 - 2019/04</td>
                         <td>某マーケティング企業</td>
                         <td>学生インターンとして欠測処理の研究開発</td>
                     </tr>
                     <tr>
-                        <td>2019/05 - 現在</td>
+                        <td>2019/05 - 2025/08</td>
                         <td>某スタートアップ企業</td>
                         <td>業務委託契約で、DSを用いたサービス開発/改善</td>
                     </tr>
 				    <tr>
-				        <td>2020/03</td>
-				        <td>立命館大学</td>
-				        <td>数理科学科卒業</td>
-				    </tr>
-				    <tr>
-				        <td>2022/03</td>
+				        <td>2020/04 - 2022/03</td>
 				        <td>京都大学大学院</td>
-				        <td>情報学研究科卒業</td>
+				        <td>情報学研究科 入学・卒業</td>
 				    </tr>
                     <tr>
                         <td>2022/04 - 現在</td>
                         <td>某日経大手企業</td>
                         <td>係長相当の役職で新卒入社</td>
-                      </tr>
+                    </tr>
+					<tr>
+                        <td>2024/08 - 2025/10</td>
+                        <td>某スタートアップ企業</td>
+                        <td>画像処理技術の実証実験</td>
+                    </tr>
 				  </tbody>
 				</table>
 			</div>
@@ -284,6 +289,30 @@
 				      </div>
 				    </div>
 				  </div>
+				  <div class="accordion-item">
+				    <h2 class="accordion-header" id="heading2024-10">
+				      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2024-10" aria-expanded="false" aria-controls="collapse2024-10">
+				        2024/10　設備保全サービスの提案・研究開発リード
+				      </button>
+				    </h2>
+				    <div id="collapse2024-10" class="accordion-collapse collapse" aria-labelledby="heading2024-10">
+				      <div class="accordion-body">
+                        案件化が難しかった中小企業の設備保全では、とあるボトルネック課題が存在した。この課題を技術的に解決する方法を考案し、サービス化を提案。研究開発をリードすることにより、約10件ほどの実証実験の研究リード・マネジメントを実施。
+				      </div>
+				    </div>
+				  </div>
+				   <div class="accordion-item">
+				    <h2 class="accordion-header" id="heading2025-10">
+				      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2025-10" aria-expanded="false" aria-controls="collapse2025-10">
+				        2025/10　設備保全技術の出願2件
+				      </button>
+				    </h2>
+				    <div id="collapse2025-10" class="accordion-collapse collapse" aria-labelledby="heading2025-10">
+				      <div class="accordion-body">
+                        新しい設備保全サービスで使用する発明2件を出願。寄与率は2件とも75%ほどであり、課題発見、アイデア、実験計画、報告までを担当。具体的な実験についてはマネジメントに徹し、実装は他メンバーに依頼。
+				      </div>
+				    </div>
+				  </div>
 				</div>
                 <div class="accordion-item">
 				    <h2 class="accordion-header" id="headingOther">
@@ -311,7 +340,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h2>スキル</h2>
+				<h2>プログラミング・スキル</h2>
 			</div>
 		</div>
 
@@ -321,24 +350,29 @@
 				<div class="bootstrap-tabs">
 					<nav>
 					<div class="nav nav-tabs" id="nav-tab" role="tablist">
-					    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-python" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Python</button>
+						<button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-git" type="button" role="tab" aria-controls="nav-home" aria-selected="true">git</button>
+					    <button class="nav-link" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-python" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Python</button>
 					    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-sql" type="button" role="tab" aria-controls="nav-home" aria-selected="false">SQL</button>
 					    <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-cloud" type="button" role="tab" aria-controls="nav-home" aria-selected="false">クラウド</button>
                         <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-web" type="button" role="tab" aria-controls="nav-home" aria-selected="false">Web開発</button>
 					</div>
 					</nav>
 					<div class="tab-content" id="nav-tabContent">
-					<div class="tab-pane fade show active" id="nav-python" role="tabpanel" aria-labelledby="nav-home-tab">
+					<div class="tab-pane fade show active" id="nav-git" role="tabpanel" aria-labelledby="nav-home-tab">
+                        チームでの開発経験があります。
+                    </div>
+					<div class="tab-pane fade" id="nav-python" role="tabpanel" aria-labelledby="nav-home-tab">
                         調べながらであれば、大体任意のやりことを実現できます。
                     </div>
 					<div class="tab-pane fade" id="nav-sql" role="tabpanel" aria-labelledby="nav-home-tab">
-                        MySQLを学生インターンで一年以上使用していました。正規化などの基本的なところは抑えています。
+                        MySQLを学生インターンで一年以上使用していました。基本的な操作はできます。
                     </div>
 					<div class="tab-pane fade" id="nav-cloud" role="tabpanel" aria-labelledby="nav-home-tab">
                         AWSのSageMakerを使用して、EC2のデータを機械学習モデルで学習することはできます。
                     </div>
                     <div class="tab-pane fade" id="nav-web" role="tabpanel" aria-labelledby="nav-home-tab">
-                        フリーのテンプレートを用いて、ホームページを作成可能です。バックエンドでは、PythonのFlaskを使用します。
+                        フリーのテンプレートを用いて、ホームページを作成可能です。バックエンドでは、PythonのFlaskを使用します。<br>
+						自分専用の家計簿アプリを作成しています。
                     </div>
 					</div>
 				</div>
